# streaming-playground

./: README.md  pyproject.toml
processing/: spark_stream_kafka_avro.py  spark_stream_kafka_json.py
processing/reader_schema/avro/: ValueSchema.avsc
producer/: generic_event.py  kafka_create_topic.py  kafka_event_generator.py  py_producers.py
producer/events/sensror_event/: sensor_event.py
producer/events/sensror_event/avro_schema/: KeySchema.avsc  ValueSchema.avsc
producer/events/sensror_event/json_schema/: value_schema.jsc
