[tool.poetry]
name = "streaming-playground"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "streaming_playground"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.2"
confluent-kafka = "^1.9.2"
requests = "^2.28.1"
jsonschema = "^4.17.3"
findspark = "^2.0.1"
avro = "^1.11.1"
fastavro = "^1.7.0"


[tool.poetry.group.dev.dependencies]
black = {version = "^23.1a1", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
